tests/cases/alloc_certificate/accept/direct_fip_callee.pr
fip fn id(x) = x

fn top(x : Int) : Int without alloc = id(x)
