tests/cases/alloc_certificate/reject/uncertified_callee.pr
type Box = Box(Int)

fn mk(x : Int) : Box = Box(x)

fn top(x : Int) : Box without alloc = mk(x)
